--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.6'
 services:
 
   redis:
-    image: redislabs/redisearch:latest
+    image: redislabs/redisearch:2.0.0
     restart: always
     ports:
       - 6379:6379
@@ -17,7 +17,7 @@ services:
     environment: 
         - REDIS_HOST=redis
     depends_on:
-      - "redis" 
+      - redis
     networks:
       - foo
 
